.ci/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
      - name: ${APP_NAME}
        image: ungarelli/${APP_NAME}:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
          - name: ${NAMESPACE}-${APP_NAME}
            mountPath: /data
            subPath: ${NAMESPACE}/${APP_NAME}/
      volumes:
        - name: ${NAMESPACE}-${APP_NAME}
          persistentVolumeClaim:
            claimName: ${APP_NAME}
