.ci/service.yml
apiVersion: v1
kind: Service
metadata:
 name: ${APP_NAME}
 namespace: ${NAMESPACE}
 labels:
   app: ${APP_NAME}
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ${APP_NAME}
status:
  loadBalancer: {}
