.ci/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: ${APP_NAME}.${APP_DOMAIN}
      http:
        paths:
          - path:
            backend:
              service:
                name: ${APP_NAME}
                port:
                  number: 8080
  tls:
    - hosts:
        - ${APP_NAME}.${APP_DOMAIN}
      secretName: ${NAMESPACE}-${APP_NAME}
status:
  loadBalancer: {}
